css/pages/home/home.css
.main-content{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    text-align: justify;
    padding: 100px 10px;
}

.main-language-descrip{
    padding: 0 0 50px 0;
}

.main-front-title {
    font-size: 4.5rem;
    font-weight: bold;
    color: white;
    padding: 10px 0;
}

.main-front-descrip{
    font-size: 1.5rem;
    color: white;
    padding: 10px 0;
    max-width: 60ch;
}

.main-front{
    display: grid;
}

.card-container {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 90%;
}

.card {
    height: 300px;
    width: 400px;
    margin: 3rem 0 0 0;
    background: linear-gradient(90deg, rgba(8,0,255,1) 0%, rgba(0,245,255,1) 100%);
    display: flex;
    justify-content: center;
    align-items: center;
    filter: grayscale(0.5);
    color: white;
    cursor: pointer;
    transition: 0.3s;
}

.card-text {
    width: 40%;
    font-family: sans-serif;
    letter-spacing: 1px;
    color: white;
    font-size: 17px;
}

.card-wrapper {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
}

.card-wrapper::before {
    content: '';
    position: absolute;
    height: 100px;
    width: 100px;
    display: block;
    border: 1px solid white;
    opacity: 0;
    transition: 0.3s;
}

.card-wrapper h2 {
    font-size: 40px;
    text-transform: uppercase;
    letter-spacing: 4px;
    margin: 0;
    transition: 0.3s;
}

.card-wrapper p {
    font-size: 0;
    visibility: hidden;
    opacity: 0;
    font-weight: bold;
    text-transform: uppercase;
    transition: 0.3s;
}

.card:hover {
    filter: unset;
}

.card:hover > .card-wrapper::before {
    height: 250px;
    width: 350px;
    opacity: 1;
}

.card:hover > .card-wrapper p {
    opacity: 1;
    visibility: visible;
    padding-top: 10px;
    font-size: 14px;
}

@media (max-width: 768px) {
    .main-content{
        padding: 20px 10px;
    }
    .main-front-title {
        font-size: 3.5rem;
        text-align: center;
    }

    .main-front-descrip{
        font-size: 1.3rem;
        text-align: center;
    }

    .main-language-descrip{
    padding: 0;
    }

    .card-container {
        margin: 0 auto;
        flex-direction: column;
    }

    .card-wrapper h2 {
        font-size: 30px;
    }

    .container .card-container:nth-child(2),
    .container .card-container:nth-child(4) {
        flex-direction: column-reverse;
    }

    .card {
        height: 250px;
        width: 250px;
    }

    .card-text {
        width: 90%;
        margin-top: 2rem;
        text-align: center;
    }

    .card:hover > .card-wrapper::before {
        height: 190px;
        width: 190px;
    }

}

@media (max-width: 530px) {
    .main-front-title {
        font-size: 2rem;
    }

    .main-front-descrip{
        font-size: 1rem;
    }
}

